[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdvtools"
version = "0.0.8"
authors = [
    { name= "Martin Sergeant", email="m.j.sergeant1@googlemail.com"},
    { name= "PeterTodd", email="peter.todd@well.ox.ac.uk"},
]
description = "Multi Dimensional Viewer (MDV) is web based application for analyzing data"
readme = "pypireadme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
 "fasteners==0.19",
 "Flask>=2.2.0",
 "flask_socketio>=5.3.0",
 "h5py>=3.5.0",
 "mudata>=0.2.3",
 "numpy>=1.22",
 "pandas>=1.5.0",
 "scanpy>=1.7.2",
 "anndata>=0.10.8, !=0.10.9", #0.10.9 is incompatible with some versions of mudata
 "scipy>=1.7.3",
 "typing_extensions>=4.1.0",
 "Werkzeug>=2.3.0"
]

[project.urls]
"Homepage" = "https://github.com/Taylor-CCB-Group/MDV"
"Bug Tracker" = "https://github.com/Taylor-CCB-Group/MDV/issues"

[tool.hatch.build]
directory = "./dist"

[tool.hatch.build.targets.wheel.force-include]
"../python/mdvtools/mdvproject.py" = "mdvtools/mdvproject.py"
"../python/mdvtools/__init__.py" = "mdvtools/__init__.py"
"../python/mdvtools/image_view_prototype.py"="mdvtools/image_view_prototype.py"
"../python/mdvtools/websocket.py"="mdvtools/websocket.py"
"../python/mdvtools/server.py"="mdvtools/server.py"
"../python/mdvtools/project_router.py"="mdvtools/project_router.py"
"../python/mdvtools/conversions.py"="mdvtools/conversions.py"
"../python/mdvtools/charts" = "mdvtools/charts"
"../python/mdvtools/static"="mdvtools/static"
"../python/mdvtools/templates"="mdvtools/templates"
"../python/mdvtools/chart_prototypes.py" = "mdvtools/chart_prototypes.py"





