[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdvtools"
version = "0.0.4"
authors = [
    { name= "Martin Sergeant", email="m.j.sergeant1@googlemail.com"},
    { name= "PeterTodd", email="peter.todd@well.ox.ac.uk"},
]
description = "Multi Dimensional Viewer (MDV) is web based application for analyzing data"
readme = "pypireadme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
 "fasteners==0.19",
 "Flask==3.1.0",
 "flask_socketio==5.5.1",
 "h5py==3.12.1",
 "mudata==0.3.1",
 "numpy==2.1.3",
 "pandas==2.2.3",
 "scanpy==1.10.4",
 "scipy==1.15.1",
 "typing_extensions==4.12.2",
 "Werkzeug==3.1.3"
]

[project.urls]
"Homepage" = "https://github.com/Taylor-CCB-Group/MDV"
"Bug Tracker" = "https://github.com/Taylor-CCB-Group/MDV/issues"

[tool.hatch.build]
directory = "./dist"

[tool.hatch.build.targets.wheel.force-include]
"../python/mdvtools/mdvproject.py" = "mdvtools/mdvproject.py"
"../python/mdvtools/__init__.py" = "mdvtools/__init__.py"
"../python/mdvtools/image_view_prototype.py"="mdvtools/image_view_prototype.py"
"../python/mdvtools/websocket.py"="mdvtools/websocket.py"
"../python/mdvtools/server.py"="mdvtools/server.py"
"../python/mdvtools/project_router.py"="mdvtools/project_router.py"
"../python/mdvtools/conversions.py"="mdvtools/conversions.py"
"../python/mdvtools/charts" = "mdvtools/charts"
"../python/mdvtools/static"="mdvtools/static"
"../python/mdvtools/templates"="mdvtools/templates"





