[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdvtools"
version = "0.0.12"
authors = [
    { name= "Martin Sergeant", email="m.j.sergeant1@googlemail.com"},
    { name= "PeterTodd", email="peter.todd@well.ox.ac.uk"},
]
description = "Multi Dimensional Viewer (MDV) is web based application for analyzing data"
readme = "pypireadme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
 "fasteners==0.19",
 "Flask>=2.2.0",
 "h5py>=3.5.0",
 "mudata>=0.2.3",
 "pyyaml>=5.3",
 "numpy>=1.22",
 "pandas>=1.5.0",
 "scanpy>=1.7.2",
 "anndata>=0.10.8, !=0.10.9", #0.10.9 is incompatible with some versions of mudata
 "scipy>=1.7.3",
 "typing_extensions>=4.1.0",
 "Werkzeug>=2.3.0",
 "spatialdata>=0.5.0",
 "spatialdata>=0.4.0",
 "polars>=1.35"
]

[project.urls]
"Homepage" = "https://github.com/Taylor-CCB-Group/MDV"
"Bug Tracker" = "https://github.com/Taylor-CCB-Group/MDV/issues"

[tool.hatch.build]
directory = "./dist"

[project.scripts]
mdvtools = "mdvtools.cli:cli"

[tool.hatch.build.targets.wheel.force-include]
"../python/mdvtools/mdvproject.py" = "mdvtools/mdvproject.py"
"../python/mdvtools/__init__.py" = "mdvtools/__init__.py"
"../python/mdvtools/image_view_prototype.py"="mdvtools/image_view_prototype.py"
"../python/mdvtools/serverlite.py"="mdvtools/serverlite.py"
"../python/mdvtools/server_utils.py"="mdvtools/server_utils.py"
"../python/mdvtools/conversions.py"="mdvtools/conversions.py"
"../python/mdvtools/charts" = "mdvtools/charts"
"../python/mdvtools/static"="mdvtools/static"
"../python/mdvtools/templates"="mdvtools/templates"
"../python/mdvtools/chart_prototypes.py" = "mdvtools/chart_prototypes.py"
"../python/mdvtools/logging_config.py"="mdvtools/logging_config.py"
"../python/mdvtools/cli.py"="mdvtools/cli.py"
"../python/mdvtools/spatial"="mdvtools/spatial"
"../python/mdvtools/network_helpers.py"="mdvtools/network_helpers.py"

[tool.hatch.build.targets.wheel]
exclude = [
    "mdvtools/static/**/*.map",
    "mdvtools/static/**/*.js.map",
]




