[project]
name = "mdvtools"
version = "0.0.1"
description = "Multi Dimensional Viewer (MDV) is web based application for analyzing data"
authors = [
    { name = "Martin Sergeant", email = "m.j.sergeant1@googlemail.com" },
    { name = "PeterTodd", email = "peter.todd@well.ox.ac.uk" },
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anndata==0.12.2",
    "fasteners>=0.18,<0.19",
    "Flask==3.0.3",
    "Flask-SocketIO>=5.3.6,<6",
    "h5py>=3.10.0,<4",
    "mudata>=0.3.0",
    "numpy<2.3.0",
    "pandas==2.3.2",
    "scanpy==1.11.4",
    "scipy>=1.11.3,<2",
    "werkzeug>=3.0.2,<4",
    "gevent>=25.5.1,<26",
    "langchain>=0.3.27,<0.4",
    "langchain-experimental>=0.3.4,<0.4",
    "regex>=2024.5.15,<2025",
    "langchain-openai>=0.3.33,<0.4",
    "faiss-cpu==1.12.0",
    "tabulate>=0.9.0,<0.10",
    "python-dotenv>=1.0.1,<2",
    "nbformat>=5.10.4,<6",
    "polars>=1.31.0,<2",
    "ruff>=0.3.7,<0.4",
    "spatialdata>=0.7.2,<0.8",
    "spatialdata-io>=0.6.0,<0.7",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402,<2",
    "pytest>=8.1.1,<9",
    "ome-types>=0.5.0,<0.6",
    "jupyterlab==4.4.9",
    "leidenalg>=0.10.2,<0.11",
    "matplotlib>=3.8.4,<4",
    "setuptools==80.9.0",
    "packaging>=24.0,<25",
    "pillow>=10.3.0,<11",
    "seaborn>=0.13.2,<0.14",
    "umap-learn>=0.5.6,<0.6",
    "statsmodels>=0.14.2,<0.15",
    "generate-tiff-offsets>=0.1.7,<0.2",
    "spatialdata-plot>=0.2.12,<0.3",
]
docs = [
    "sphinx-rtd-theme>=2.0.0,<3",
    "sphinx>=7.3.7,<8",
    "sphinx-autoapi>=3.0.0,<4",
]
backend = [
    "flask-sqlalchemy>=3.1.1,<4",
    "psycopg2>=2.9.9,<3",
    "gunicorn==23.0.0",
    "psycogreen>=1.0.2,<2",
]
llm = [
    "gspread>=6.1.2,<7",
    "oauth2client>=4.1.3,<5",
]
auth = [
    "authlib==1.6.4",
    "requests>=2.32.3,<3",
    "python-jose>=3.3.0,<4",
    "auth0-python>=4.9.0,<5",
    "flask-jwt-extended>=4.7.1,<5",
    "redis>=5.2.1,<6",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
markers = [
    "performance: marks tests as performance tests (deselect with '-m \"not performance\"')",
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests"
]

testpaths = ["mdvtools/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers"
]

[project.scripts]
mdvtools = "mdvtools.cli:cli"